# kopete

./: README.md
protocols/: CMakeLists.txt
protocols/irc/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  gsoc code  ircaccount.cpp  ircaccount.h  ircaccountpreferences.ui  ircaddcontactpage.cpp  ircaddcontactpage.h  ircaddui.ui  irccontact.cpp  irccontact.h  irceditaccountwidget.cpp  irceditaccountwidget.h  ircfakeserver.cpp  ircfakeserver.h  ircincomingmessage.cpp  ircincomingmessage.h  ircprotocol.cpp  ircprotocol.h  kopete_irc_automoc.cpp.files  ui_ircaccountpreferences.h  ui_ircaddui.h
protocols/irc/icons/: cmake_install.cmake
protocols/irc/ui/: ircwebcamdialog.cpp  ircwebcamdialog.h
